CUI: list-view: make sure link buttons align correctly in the rows

--- a/src/scss/themes/fylr/components/_list-view.scss
+++ b/src/scss/themes/fylr/components/_list-view.scss
@@ -66,7 +66,12 @@
 		&:not(.cui-button-href):not(.cui-multi-input-tag-button) {
 			@include button-bordered();
 		}
+
+		&.cui-button-href {
+			height: $btn-height; // keep alignment in the row
+		}
 	}
+
 }
 
 // * Body
